# mimir

./: .gitignore  LICENSE  PLAYBOOK.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benchmarks/: compare.py  eval.py  eval_dataset.py  run.py
examples/: mimir_demo.ipynb
src/mimir/: __init__.py  clustering.py  core.py  distill.py  embeddings.py  models.py  ranking.py
src/mimir/storage/: __init__.py  base.py  migrations.py  query.py  sqlite.py
tests/: conftest.py  test_distill.py  test_eval.py  test_mimir.py  test_ranking.py  test_recall.py  test_recommend.py  test_storage.py  test_vector_index.py
